k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aeropath
  labels:
    name: aeropath
    environment: production
